--- a/templates/eminence/partials/timbre.hbs
+++ b/templates/eminence/partials/timbre.hbs
@@ -1,5 +1,5 @@
-<div class="eminence-timbre{{#if (or (eq styleJeu "standard") (eq styleJeu "avance"))}}-2{{/if}}">
-  {{#if (or (eq styleJeu "standard") (eq styleJeu "avance"))}}
+<div class="eminence-timbre{{#if (or isStyleJeuStandard isStyleJeuAvance)}}-2{{/if}}">
+  {{#if (or isStyleJeuStandard isStyleJeuAvance)}}
     <div class="cadre-img">
       <img class="img-timbre" src="systems/penombre/assets/ui/timbre.png" />
     </div>
