--- a/templates/eminence/partials/harmoniques.hbs
+++ b/templates/eminence/partials/harmoniques.hbs
@@ -14,7 +14,7 @@
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
               </div>
               {{#if unlocked}}
-              <select name="system.harmoniques.nuit.valeur" class="de-de-nuit-saisie absolue">
+              <select name="system.harmoniques.nuit.valeur" class="de-de-nuit-saisie editer-harmoniques absolue">
                 {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.nuit.valeur localize=true}}
               </select>
               {{else}}
@@ -37,7 +37,7 @@
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
               </div>
               {{#if unlocked}}
-              <select name="system.harmoniques.ame.valeur" class="de-d-ame-saisie absolue">
+              <select name="system.harmoniques.ame.valeur" class="de-d-ame-saisie editer-harmoniques absolue">
                 {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.ame.valeur localize=true}}
               </select>
               {{else}}
@@ -59,7 +59,7 @@
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
               </div>
               {{#if unlocked}}
-              <select name="system.harmoniques.nature.valeur" class="de-de-nature-saisie absolue">
+              <select name="system.harmoniques.nature.valeur" class="de-de-nature-saisie editer-harmoniques absolue">
                 {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.nature.valeur localize=true}}
               </select>
               {{else}}
@@ -82,7 +82,7 @@
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
               </div>
               {{#if unlocked}}
-              <select name="system.harmoniques.esprit.valeur" class="de-d-esprit-saisie absolue">
+              <select name="system.harmoniques.esprit.valeur" class="de-d-esprit-saisie editer-harmoniques absolue">
                 {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.esprit.valeur localize=true}}
               </select>
               {{else}}
@@ -106,7 +106,7 @@
                 <img class="case-de" src="/systems/penombre/assets/ui/case_de_penombre.png" alt="|" />
               </div>
               {{#if unlocked}}
-              <select name="system.harmoniques.etincelle.valeur" class="de-d-etincelle-saisie absolue">
+              <select name="system.harmoniques.etincelle.valeur" class="de-d-etincelle-saisie editer-harmoniques absolue">
                 {{selectOptions harmoniquesChoices selected=systemSource.harmoniques.etincelle.valeur localize=true}}
               </select>
               {{else}}
