ombre portée à gauche au lieu de droite

--- a/templates/reserve-collegiale.hbs
+++ b/templates/reserve-collegiale.hbs
@@ -3,7 +3,7 @@
   <div class="jetons jetons-{{ifThen isGM 'gm' 'player'}}">
     {{#each jetons}}
       <div class="jeton {{ifThen this.valeur 'active' 'inactive'}}">
-        <img class="jeton jeton-{{@key}} absolue jeton-contextmenu dropshadow-{{ifThen this.valeur 'actif' 'inactif'}}" data-action="jeton" data-index="{{@key}}" src="{{getJetonImage this.valeur}}"  data-tooltip="Jeton {{@key}}"></img>
+        <img class="jeton jeton-{{@key}} absolue jeton-contextmenu dropshadow-{{ifThen this.valeur 'actif' 'inactif'}}" data-action="jeton" data-index="{{@key}}" src="{{getJetonImage this.valeur}}"  data-tooltip="{{localize 'PENOMBRE.ui.jeton'}} {{@key}}"></img>
       </div>
     {{/each}}
   </div>
