--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -103,6 +103,37 @@
 }
 
 /* ---------------------------------------------
+        Concerne les pages de journaux
+--------------------------------------------- */
+.journal-header {
+  input {
+    font-family: @font-cattedrale;
+    // text-transform: uppercase;
+  }
+}
+
+.journal-entry-page {
+  h1, h2, h3, h4, h5, h6 {
+    font-family: @font-cattedrale;
+    // text-transform: uppercase;
+    color: @color-primary;
+  }
+}
+
+/* ---------------------------------------------
+        Concerne l'editor
+--------------------------------------------- */
+.penombre {
+  .editor-content {
+    h1, h2, h3, h4, h5, h6 {
+      font-family: @font-cattedrale;
+      color: @color-primary;
+    }
+  }
+}
+
+
+/* ---------------------------------------------
         Thème Clair
 --------------------------------------------- */
 
