--- a/penombre.css
+++ b/penombre.css
@@ -125,6 +125,44 @@ body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-
   width: 525px;
   padding-left: 4px;
 }
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre label,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre label {
+  display: flex;
+  float: none;
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre span,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre span {
+  display: flex;
+  float: none;
+  font-family: "ChocoCovRainBold";
+  font-size: 17px;
+  color: #56605b;
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-1-2,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 {
+  float: left;
+  width: 212px;
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-2-2,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-2-2 {
+  float: left;
+  width: 101px;
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-2-2 img,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-2-2 img {
+  float: left;
+  width: 20px;
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-2-2 span,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-2-2 span {
+  margin-left: 25px;
+  width: calc(100% - 25px);
+}
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-3-2,
+body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-3-2 {
+  margin-left: 313px;
+  width: calc(100% - 313px);
+}
 body.theme-light .penombre.eminence .eminence-content .eminence-timbre .logo-penombre,
 body.theme-light .penombre.eminence .eminence-content .eminence-timbre-2 .logo-penombre {
   float: none;
