--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -171,6 +171,14 @@ body {
               width: 525px;
               padding-left: 4px;
 
+              .label-timbre {
+                color: @color-secondary;
+              }
+
+              .label-peste {
+                color: @color-accent;
+              }
+
               label {
                 display: flex;
                 float: none;
@@ -288,6 +296,52 @@ body {
               float: left;
               width: 525px;
               padding-left: 4px;
+              
+              .label-timbre {
+                color: @color-secondary;
+              }
+
+              .label-peste {
+                color: @color-accent;
+              }
+
+              label {
+                display: flex;
+                float: none;
+              }
+
+              span {
+                display: flex;
+                float: none;
+                font-family: @font-chocolate;
+                font-size: @font-size-base;
+                color: @color-secondary;
+              }
+
+              .col-1-2 {
+                float: left;
+                width: 212px;
+              }
+
+              .col-2-2 {
+                float: left;
+                width: 101px;
+
+                img {
+                  float: left;
+                  width: 20px;
+                }
+
+                span {
+                  margin-left: 25px;
+                  width: calc(100% - 25px);
+                }
+              }
+
+              .col-3-2 {
+                margin-left: 313px;
+                width: calc(100% - 313px);
+              }
             }
 
             .logo-penombre {
