Implémentation des atouts (pas finie)

--- a/penombre.css
+++ b/penombre.css
@@ -57,6 +57,9 @@ penombre-toggle-switch[checked] thumb {
 /* ---------------------------------------------
         Mixins
 --------------------------------------------- */
+.centpourcent {
+  width: 100%;
+}
 /* ---------------------------------------------
         Interface de Foundry VTT
 --------------------------------------------- */
