--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -47,6 +47,10 @@
         Mixins
 --------------------------------------------- */
 
+.centpourcent {
+  width: 100%;
+}
+
 // Mixin pour le texte vertical
 .vertical-text(@color: @color-primary) {
   writing-mode: vertical-rl;
