--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -15,15 +15,39 @@
                 <img class="img-potentiel absolue" src="systems/penombre/assets/ui/potentiel_creux.png" alt="|" />
             </div>
         </div>
+
         <div class="atouts{{#if isStyleJeuAvance}}-2{{/if}} absolue">
-            {{#each atouts as |atout|}}
-                {{log 'atout' atout }}
-                <input type="checkbox" {{#if atout.system.utilise}}checked{{/if}}></input>
-                <label>{{atout.name}}</label>                
-                {{atout.system.description}}
-                {{atout.system.type}}
-                <br>
-            {{/each}}
+            <table class="item-list centpourcent">
+                <tr class="centpourcent">
+                    <th>
+                        {{ localize 'PENOMBRE.ui.atoutNom' }}
+                    </th>
+                    <th>
+
+                    </th>
+                    <th class="item-controls">
+
+                    </th>
+                </tr>
+                {{#each atouts as |item id|}}
+                <tr class="item">
+                    <td>
+                        <span class="item-name">{{item.name}}</span>
+                    </td>
+                    <td>
+                        <input type="item-value">{{item.valeur}}</span>
+                    </td>
+                    <td class="item-controls">
+                        <a class="item-control" title="{{ localize 'PENOMBRE.ui.atoutEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
+                        <a class="item-control" title="{{ localize 'PENOMBRE.ui.atoutDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    </td>
+                </tr>
+                {{/each}}
+            </table>
+            <span>
+            <a class="item-control" title="{{ localize 'PENOMBRE.ui.atoutCreate' }}" data-action="create" data-type="atout"><i class="fas fa-plus"></i> {{ localize "PENOMBRE.ui.atoutCreate" }}</a>
+            </span> 
         </div>
+
     </div>
 </div>
