--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -813,6 +813,8 @@ body {
         }
 
         .content {
+          text-align: left;
+
           .potentiel {
             text-align: center;
 
@@ -894,12 +896,22 @@ body {
         min-height: 255px;
         color: @color-secondary;
         text-align: center;
+        
+        .plusitem {
+            text-align: right;
+        }
+
       }
 
       .eminence-atouts-2 {
         min-height: 400px;
         color: @color-secondary;
         text-align: center;
+
+        .plusitem {
+            text-align: right;
+        }
+
       }
 
       .eminence-atouts,
@@ -911,6 +923,8 @@ body {
         }
 
         .content {
+          text-align: left;
+
           .potentiel {
             text-align: center;
 
@@ -968,7 +982,7 @@ body {
           .atouts-2 {
             // float: left;
             margin-left: 100px;
-            width: (100% - 103px);
+            width: calc(100% - 103px);
             min-height: 290px;
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
@@ -1000,6 +1014,8 @@ body {
         }
 
         .content {
+          text-align: left;
+
           .potentiel {
             text-align: center;
 
